# nerv

./: .gitignore  build-win.ps1  build-win7.bat  build.sh  readme.md
llama.cpp/: .gitignore  AGENTS.md  (+7 more)
llama.cpp/tools/server/: CMakeLists.txt  README-dev.md  README.md  server-common.cpp  server-common.h  server-context.cpp  server-context.h  server-models.cpp  server-models.h  server-queue.cpp  server-queue.h  server-task.cpp  server-task.h  server.cpp  utils.hpp
llama.cpp/tools/server/tests/: utils.py
llama.cpp/tools/server/tests/unit/: test_chat_completion.py  test_compat_anthropic.py  test_completion.py
llama.cpp/tools/server/webui/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
llama.cpp/tools/server/webui/docs/architecture/: high-level-architecture-simplified.md  high-level-architecture.md
llama.cpp/tools/server/webui/src/: app.d.ts
llama.cpp/tools/server/webui/src/lib/components/app/: index.ts
llama.cpp/tools/server/webui/src/lib/components/app/actions/: ActionIcon.svelte
llama.cpp/tools/server/webui/src/lib/components/app/content/: MarkdownContent.svelte
llama.cpp/tools/server/webui/src/lib/components/app/mcp/: McpServerForm.svelte
llama.cpp/tools/server/webui/src/lib/components/app/misc/: BadgeChatStatistic.svelte  MarkdownContent.svelte  SyntaxHighlightedCode.svelte
llama.cpp/tools/server/webui/src/lib/components/app/models/: ModelsSelector.svelte  ModelsSelectorOption.svelte  ModelsSelectorSheet.svelte  index.ts
llama.cpp/tools/server/webui/src/lib/components/app/server/: ServerErrorSplash.svelte
llama.cpp/tools/server/webui/src/lib/constants/: floating-ui-constraints.ts  index.ts  settings-config.ts  settings-keys.ts
llama.cpp/tools/server/webui/src/lib/enums/: index.ts
llama.cpp/tools/server/webui/src/lib/hooks/: use-processing-state.svelte.ts
llama.cpp/tools/server/webui/src/lib/services/: chat.ts  database.ts  parameter-sync.service.ts  parameter-sync.spec.ts  parameter-sync.ts
llama.cpp/tools/server/webui/src/lib/stores/: chat.svelte.ts  conversations.svelte.ts  mcp.svelte.ts  models.svelte.ts  server.svelte.ts  settings.svelte.ts
llama.cpp/tools/server/webui/src/lib/types/: api.d.ts  chat.d.ts  settings.d.ts
llama.cpp/tools/server/webui/src/lib/utils/: clipboard.ts  favicon.ts  file-preview.ts  file-type.ts  index.ts  latex-protection.test.ts  modality-file-validation.ts  model-names.test.ts  process-uploaded-files.ts
llama.cpp/tools/server/webui/src/routes/: +layout.svelte
llama.cpp/tools/server/webui/tests/stories/: ChatForm.stories.svelte
stable-diffusion.cpp/examples/server/: CMakeLists.txt  main.cpp
tts.cpp/: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Dockerfile  README.md  get-flags.mk
tts.cpp/cmake/: build-info.cmake  embed_zh_dict.cmake  embed_zh_dict_rc.cmake  tts-config.cmake.in  tts.pc.in  xxd.cmake
tts.cpp/cmake/toolchains/: aarch64-linux-gnu.cmake
tts.cpp/dict/: pinyin.txt
tts.cpp/docs/: CosyVoice3_CPU_推理待办清单.md  Kokoro_CPU_推理性能优化代办清单.md  Vulkan开发指南.md  ggml升级指南.md  gguf模型转换指南.md  kokoro_en_conversion.md  kokoro_zh_conversion.md  功能迭代.md
tts.cpp/examples/: CMakeLists.txt
tts.cpp/examples/cli/: CMakeLists.txt  README.md  cli.cpp  playback.cpp  playback.h  vad.cpp  vad.h  write_file.cpp  write_file.h
tts.cpp/examples/perf_battery/: CMakeLists.txt  README.md  perf_battery.cpp
tts.cpp/examples/phonemize/: CMakeLists.txt  README.md  phonemize.cpp
tts.cpp/examples/quantize/: CMakeLists.txt  README.md  quantize.cpp  quantize_impl.cpp  quantize_impl.h
tts.cpp/examples/server/: CMakeLists.txt  README.md  httplib.h  server.cpp  tts_server_threading_osx.h
tts.cpp/examples/server/public/: index.html
tts.cpp/examples/zh_frontend/: CMakeLists.txt  zh_frontend_cli.cpp
tts.cpp/ggml/: AUTHORS  CMakeLists.txt
tts.cpp/ggml-patches/: .clang-format-ignore  CMakeLists.txt  README.txt  ggml-iterator.h  llama-mmap.cpp  llama-mmap.h
tts.cpp/ggml/include/: ggml-metal.h  ggml.h
tts.cpp/ggml/scripts/: sync-llama.last
tts.cpp/ggml/src/: CMakeLists.txt  ggml.c
tts.cpp/ggml/src/ggml-cpu/: CMakeLists.txt  ggml-cpu-ffast-math.c  ggml-cpu.c
tts.cpp/ggml/src/ggml-metal/: ggml-metal-impl.h  ggml-metal.m  ggml-metal.metal
tts.cpp/ggml/src/ggml-vulkan/: ggml-vulkan.cpp
tts.cpp/include/: args.h  audio_file.h  common.h
tts.cpp/phonemization_training/: README.md  phonemization_trainer.py  requirements.txt  stressed_and_composites.json  train_phonemizer  util.py
tts.cpp/py-gguf/: README.md  convert_cosyvoice3_to_gguf  convert_dia_to_gguf  convert_kokoro_to_gguf  convert_orpheus_to_gguf  convert_parler_tts_to_gguf  convert_t5_encoder_to_gguf  requirements.txt
tts.cpp/py-gguf/tts_encoders/: __init__.py  cosyvoice3_gguf_encoder.py  dac_gguf_encoder.py  dia_gguf_encoder.py  kokoro_gguf_encoder.py  orpheus_gguf_encoder.py  parler_tts_gguf_encoder.py  t5_encoder_gguf_encoder.py  tensor_util.py  tts_encoder.py
tts.cpp/scripts/: gen_kokoro_zh_pinyin_data.py  verify_audio.py
tts.cpp/src/: CMakeLists.txt  args.cpp  numbers_compat.h  sampler.cpp  sampler.h  tokenizer.cpp  tokenizer.h  tts_model.cpp  tts_model.h  util.cpp  util.h
tts.cpp/src/decoder/: CMakeLists.txt  dac_model.cpp  dac_model.h  general_neural_audio_codec.cpp  general_neural_audio_codec.h  snac_model.cpp  snac_model.h
tts.cpp/src/models/: CMakeLists.txt  loaders.cpp  loaders.h
tts.cpp/src/models/dia/: loader.cpp  model.cpp  model.h
tts.cpp/src/models/dummy/: loader.cpp  model.cpp  model.h
tts.cpp/src/models/kokoro/: CMakeLists.txt  ja_frontend.cpp  ja_frontend.h  loader.cpp  model.cpp  model.h  multilingual.cpp  multilingual.h  phonemizer.cpp  phonemizer.h  zh_dict_builtin.h  zh_dict_builtin_winres.cpp  zh_frontend.cpp  zh_frontend.h  zh_pinyin_data.cpp  zh_pinyin_data.h
tts.cpp/src/models/orpheus/: CMakeLists.txt  loader.cpp  model.cpp  model.h
tts.cpp/src/models/parler/: CMakeLists.txt  loader.cpp  model.cpp  model.h
tts.cpp/src/models/parler/t5/: CMakeLists.txt  model.cpp  model.h
tts.cpp/tests/: CMakeLists.txt
tts.cpp/tests/aPaleBlueDot/: CMakeLists.txt  main.cpp
(+190 files in other folders)
